Add fonts and styles

--- a/source/sass/utils/variables.scss
+++ b/source/sass/utils/variables.scss
@@ -1,28 +1,26 @@
 /* Colors basic */
 
-$basic-white: #ffffff;
-
 /* Colors background */
 
-$background-color: #000;
+$background-menu: #f7a254;
 
 /* Colors text */
 
-$text-content: #ff0000;
-
 /* Colors icon */
 
-$icon-logo: #0000ff;
-
 /* Colors other element */
-
-$decorative-element: #ff0000;
 
 /* Font-family */
 
 $font-family-main: Tahoma, Arial, sans-serif;
 
 /* Font-size */
+
+$font-size-menu: 24px;
+
+/* Font-weight */
+
+$font-weight-menu: 500;
 
 /* Other elements properties */
 
