--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -2,13 +2,22 @@
   margin: 0 auto;
   width: 320px;
   height: auto;
+
+  @media (min-width: $tablet-width) {
+    width: 708px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1196px;
+  }
+
+  &--menu {
+    @media (min-width: $desktop-width) {
+      width: 1720px;
+    }
+  }
 }
 
 
-@media (min-width: $tablet-width) {
-  width: 640px;
-}
 
-@media (min-width: $desktop-width) {
-  width: 1100px;
-}
+
