Add layout elements and styles

--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -1,6 +1,6 @@
 .container {
   margin: 0 auto;
-  width: 320px;
+  width: 270px;
   height: auto;
 
   @media (min-width: $tablet-width) {
@@ -12,8 +12,14 @@
   }
 
   &--menu {
+    width: 270px;
+
+    @media (min-width: $tablet-width) {
+      width: 708px;
+    }
+
     @media (min-width: $desktop-width) {
-      width: 1720px;
+      width: 1400px;
     }
   }
 }
