--- a/source/sass/utils/fonts.scss
+++ b/source/sass/utils/fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "Fira Sans";
   src: local("Fira Sans"),
-    url("../fonts/FiraSans-Light.woff") format("woff");
+    url("../fonts/FiraSansLight.woff") format("woff");
   font-style: normal;
   font-weight: 300;
   font-display: swap;
