--- a/source/sass/utils/variables.scss
+++ b/source/sass/utils/variables.scss
@@ -2,7 +2,8 @@
 
 /* Colors background */
 
-$background-menu: #f7a254;
+$background-orange: #f7a254;
+$background-blue: #6aa6ff;
 
 /* Colors text */
 
@@ -16,7 +17,7 @@ $font-family-main: Tahoma, Arial, sans-serif;
 
 /* Font-size */
 
-$font-size-menu: 24px;
+$font-size-menu: 18px;
 
 /* Font-weight */
 
