--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,5 +1,5 @@
 .page-header {
-  background-color: $background-menu;
+  background-color: $background-orange;
 }
 
 .page-header__menu {
@@ -7,6 +7,6 @@
   flex-flow: wrap;
   justify-content: space-between;
   align-items: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
