--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,4 +10,13 @@
 @import "blocks/container.scss";
 
 @import "blocks/page-header.scss";
+@import "blocks/logo.scss";
 @import "blocks/menu.scss";
+@import "blocks/header.scss";
+@import "blocks/devices.scss";
+@import "blocks/devices-list.scss";
+@import "blocks/header-section.scss";
+@import "blocks/page-content.scss";
+@import "blocks/carriers.scss";
+@import "blocks/carriers-list.scss";
+@import "blocks/files.scss";
