--- a/source/sass/utils/global-style.scss
+++ b/source/sass/utils/global-style.scss
@@ -11,7 +11,7 @@ body {
   margin: 0;
   padding: 0;
 
-  font-family: Tahoma, Arial, sans-serif;
+  font-family: "Fira Sans", Arial, sans-serif;
   font-weight: 400;
   font-size: 16px;
 }
